--- a/styles/App.scss
+++ b/styles/App.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import "./header_scss/headerStyles.scss", "./banner_scss/bannerStyles.scss",
-  "./about_scss/aboutStyles.scss", "./skills_scss/skillsStyles.scss";
+  "./about_scss/aboutStyles.scss", "./skills_scss/skillsStyles.scss",
+  "./project_scss/projectStyles.scss";
 
 html,
 body {
