--- a/styles/banner_scss/_avatarStyles.scss
+++ b/styles/banner_scss/_avatarStyles.scss
@@ -4,8 +4,29 @@ $mdBreakpoint: 959px;
 $lgBreakpoint: 1279px;
 $xlBreakpoint: 1920px;
 
+@mixin fadeInRightAnimation {
+  animation-duration: 2s;
+  animation-name: fadeInLeft;
+  transition: 0.5s;
+}
+
+.avatar_container {
+  @include fadeInRightAnimation;
+}
+
 @media (max-width: $mdBreakpoint) {
   .avatar_container {
     display: none;
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
   }
 }
